2000-05-19  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* __scm.h (SCM_DEBUG_CELL_ACCESSES), gc.h (SCM_):  Added as a new
	debug option to verify all accesses to cells actually access
	objects on the heap.

	* gc.h (SCM_VALIDATE_CELL):  Added.  Only performs validation if
	SCM_DEBUG_CELL_ACCESSES is set to 1.

	(SCM_CELL_WORD, SCM_CELL_OBJECT, SCM_SET_CELL_WORD,
	SCM_SET_CELL_OBJECT):  Use SCM_VALIDATE_CELL to check every cell
	that is accessed.

2000-05-19  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* gh_data.c (gh_scm2chars, gh_scm2shorts, gh_scm2longs,
	gh_scm2floats, gh_scm2doubles):  Change !SCM_NIMP to SCM_IMP.

	* gc.c (scm_cellp):  Fixed and simplified.

	* throw.c (JBJMPBUF, SETJBJMPBUF, SCM_JBDFRAME, SCM_SETJBDFRAME,
	make_jmpbuf, scm_init_throw):  Now using double cells to represent
	jump buffers when using debug extensions.

	(freejb):  Removed.

2000-05-18  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* gh.h gh_data.c gh_funcs.c (gh_new_procedure*, gh_chars2byvect,
	gh_shorts2svect, gh_longs2ivect, gh_ulongs2uvect, gh_floats2fvect,
	gh_doubles2dvect, gh_doubles2scm, gh_define, gh_lookup,
	gh_module_lookup):  Accept const pointers as parameters.

	* gh.h gh_data.c (gh_int2scmb):  Deprecated.

2000-05-18  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* __scm.h (SCM_DEBUG_REST_ARGUMENT):  Renamed from
	SCM_DEBUG_REST_ARGUMENTS in order to clarify that we don't test
	the actual arguments in the list, but rather the rest argument as
	a list of arguments.

	* validate.h (SCM_VALIDATE_REST_ARGUMENT):  Added.

	* async.c (scm_noop), eval.c (scm_map, scm_for_each), list.c
	(scm_list_star, scm_append, scm_append_x), ports.c
	(scm_close_all_ports_except), ramap.c (scm_array_map_x,
	scm_array_for_each), regex-posix.c (scm_make_regexp), stacks.c
	(scm_make_stack), strings.c (scm_string_append), struct.c
	(scm_make_struct, scm_make_vtable_vtable):  Validate rest arguments.

	* dynl.c (DYNL_GLOBAL, sysdep_dynl_link, kw_global, sym_global,