@@ -31,6 +31,7 @@ Kalle Olavi Niemitalo
      Jorgen Schaefer
        Bill Schottstaedt
      Daniel Skarda
+    Dale P. Smith
        Ivan Toshkov
  	Tal Tversky
     Bernard Urban
